# cordfeeder

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
cordfeeder/: __main__.py  bot.py  config.py  database.py  discovery.py  formatter.py  main.py  parser.py  poller.py
docs/: discord-bot-setup.md
docs/plans/: 2026-02-26-cordfeeder-design.md  2026-02-26-cordfeeder-implementation.md
infra/: README.md  cordfeeder.service  deploy.sh  setup.sh  teardown.sh
tests/: conftest.py  test_bot.py  test_database.py  test_discovery.py  test_formatter.py  test_integration.py  test_main.py  test_parser.py  test_poller.py
tests/fixtures/: sample_atom.xml  sample_rss.xml
