[project]
name = "cordfeeder"
version = "0.1.0"
description = "RSS/Atom feed reader that posts to Discord channels"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9,<4",
    "aiosqlite>=0.20,<1",
    "discord-py>=2.4,<3",
    "feedparser>=6.0,<7",
    "python-dateutil>=2.9,<3",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
cordfeeder = "cordfeeder.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
